Fixes Page Content Overflowing on Blog on Small Displays
I tested https://www.almalinux.com/blog on an iPhone 12 pro, and a Samsung S20 and the content is wider than the screen.

The cause was the inline CSS in the /layouts/blog/list.html

I moved the CSS into the CSS files, and changed

width: 450px;

to

max-width: 100%;

This will prevent page overflow on devices with > 800px wide displays.

--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -356,6 +356,16 @@ border-bottom-color: #14598a !important;
 .al-page-blog-post .container{
   padding: 3rem 15px !important;
 }
+@media (max-width: 800px){
+  .img-fluid, .img-thumbnail {
+    height: auto;
+    max-width: 100%;
+  }
+  .custom-blog-page-section {
+    max-width: 100%;
+    margin: auto;
+  }
+}
 .al-page-elevate-index .al-cta-discuss {
   background: #2891ff;
   color: #222;
