--- a/assets/scss/blog.scss
+++ b/assets/scss/blog.scss
@@ -206,4 +206,13 @@
   color: #000 !important;
   
 }
-
+@media (max-width: 800px){
+  .img-fluid, .img-thumbnail {
+    height: auto;
+    max-width: 100%;
+  }
+  .custom-blog-page-section {
+    max-width: 100%;
+    margin: auto;
+  }
+}
